--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
 			<div class="simpleslide100">
 				<div class="simpleslide100-item bg-img1" style="background-image: url('images/bg01.jpg');"></div>
 				<div class="simpleslide100-item bg-img1" style="background-image: url('images/bamboo.jpg');"></div>
-				<!-- <div class="simpleslide100-item bg-img1" style="background-image: url('images/bg03.jpg');"></div> -->
+				<div class="simpleslide100-item bg-img1" style="background-image: url('images/office-design-concepts.jpg');">
+				</div>
 			</div>
 		</div>
 	</div>
