--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 			</div>
 
 			<div class="flex-w">
-				<!-- <a href="#" class="size3 flex-c-m how-social trans-04 m-r-15 m-b-10">
-					<i class="fa fa-facebook"></i>
+				<a href="https://github.com/Balibaloo" class="size3 flex-c-m how-social trans-04 m-r-15 m-b-10">
+					<i class="fa fa-github"></i>
 				</a>
 
-				<a href="#" class="size3 flex-c-m how-social trans-04 m-r-15 m-b-10">
+				<!-- <a href="#" class="size3 flex-c-m how-social trans-04 m-r-15 m-b-10">
 					<i class="fa fa-twitter"></i>
 				</a>
 
