--- a/git/index.html
+++ b/git/index.html
@@ -59,17 +59,13 @@
 			</div>
 
 			<div class="flex-w">
-				<a href="https://github.com/Balibaloo" class="size3 flex-c-m how-social trans-04 m-r-15 m-b-10">
+				<a href="https://github.com/Balibaloo" class="size2 flex-c-m how-social trans-04 m-r-15 m-b-10">
 					<i class="fa fa-github"></i>
 				</a>
 
-				<!-- <a href="#" class="size3 flex-c-m how-social trans-04 m-r-15 m-b-10">
-					<i class="fa fa-twitter"></i>
+				<a href="mailto:roman@kubiv.com" class="size2 flex-c-m how-social trans-04 m-r-15 m-b-10">
+					<i class="fa fa-envelope"></i>
 				</a>
-
-				<a href="#" class="size3 flex-c-m how-social trans-04 m-r-15 m-b-10">
-					<i class="fa fa-youtube-play"></i>
-				</a> -->
 				<p class="m2-txt1" style="margin-left:auto;">Roman Kubiv</p>
 			</div>
 		</div>
