--- a/git/index.html
+++ b/git/index.html
@@ -66,6 +66,11 @@
 				<a href="mailto:roman@kubiv.com" class="size2 flex-c-m how-social trans-04 m-r-15 m-b-10">
 					<i class="fa fa-envelope"></i>
 				</a>
+
+				<a href="../cv/index.html" class="size2 flex-c-m how-social trans-04 m-r-15 m-b-10">
+					<i class="fa fa-address-card"></i>
+				</a>
+
 				<p class="m2-txt1" style="margin-left:auto;">Roman Kubiv</p>
 			</div>
 		</div>
