--- a/git/index.html
+++ b/git/index.html
@@ -72,7 +72,7 @@
 				</a>
 
 				<a href="https://www.linkedin.com/in/roman-kubiv/" class="size2 flex-c-m how-social trans-04 m-r-15 m-b-10">
-					<i class="fa fab fa-linkedin-in"></i>
+					<i class="fa fa-linkedin"></i>
 				</a>
 
 				<p class="m2-txt1" style="margin-left:auto;">Roman Kubiv</p>
